# lrucheck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
src/lrucheck/: __main__.py  checker.py  cli.py  config.py  noqa.py  rules.py
tests/: test_checker.py  test_cli.py  test_config.py  test_noqa.py  test_rules.py
tests/examples/: lru001_only_patterns.py  lru003_patterns.py  lru004_patterns.py  no_functools_import.py  safe_patterns.py  unbounded_patterns.py
