[project]
name = "lrucheck"
version = "0.1.0"
description = "Detect memory-leak patterns in Python's functools.lru_cache usage."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
lrucheck = "lrucheck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lrucheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
]
