[project]
name = "lrucheck"
version = "0.2.0"
description = "Detect memory-leak patterns in Python's functools.lru_cache usage."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "Kadermiyanyedi" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lint", "linter", "lru-cache", "static-analysis", "memory-leak"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Kadermiyanyedi/lrucheck"
Issues = "https://github.com/Kadermiyanyedi/lrucheck/issues"
Repository = "https://github.com/Kadermiyanyedi/lrucheck"

[project.scripts]
lrucheck = "lrucheck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lrucheck"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lrucheck",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/examples/*.py" = ["F401", "F811", "F821", "B019", "UP033"]

[tool.codespell]
skip = "uv.lock,.git,.ruff_cache,.pytest_cache,.venv"
ignore-words-list = "lrucheck,functools,classmethod,staticmethod,pyproject"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "pre-commit>=3",
    "ty",
    "codespell>=2",
]
